php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26463 Incorrect results returned by token_get_all for heredoc
Submitted: 2003-11-29 10:08 UTC Modified: 2005-09-02 08:47 UTC
Votes:2
Avg. Score:4.5 ± 0.5
Reproduced:2 of 2 (100.0%)
Same Version:1 (50.0%)
Same OS:1 (50.0%)
From: andrey at midphase dot com Assigned: iliaa (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS OS: Windows XP
Private report: No CVE-ID: None
 [2003-11-29 10:08 UTC] andrey at midphase dot com
Description:
------------
When calling token_get_all with a string containing heredoc strings, T_END_HEREDOC element contains two semicolons separated by newline and is  followed by semicolon character.
This does not happen if heredoc string is followed by concatenation operatior


Reproduce code:
---------------
=====================
code.php
=====================
<?php
      $x=<<<DD
  jhdsjkfhjdsh
DD
."";
      $a=<<<DD
  jhdsjkfhjdsh
DD;
  echo $a;
?>

=====================
test.php
=====================
<?php
  $tokens=token_get_all(file_get_contents("test.php"));
  print_r($tokens);
?>

Expected result:
----------------
Array
(
    [0] => Array
        (
            [0] => 354
            [1] => <?php

        )

    [1] => Array
        (
            [0] => 357
            [1] =>       
        )

    [2] => Array
        (
            [0] => 307
            [1] => $x
        )

    [3] => =
    [4] => Array
        (
            [0] => 358
            [1] => <<<DD

        )

    [5] => Array
        (
            [0] => 312
            [1] =>   
        )

    [6] => Array
        (
            [0] => 305
            [1] => jhdsjkfhjdsh
        )

    [7] => Array
        (
            [0] => 312
            [1] => 

        )

    [8] => Array
        (
            [0] => 359
            [1] => DD

        )

    [9] => .
    [10] => Array
        (
            [0] => 313
            [1] => ""
        )

    [11] => ;
    [12] => Array
        (
            [0] => 357
            [1] => 
      
        )

    [13] => Array
        (
            [0] => 307
            [1] => $a
        )

    [14] => =
    [15] => Array
        (
            [0] => 358
            [1] => <<<DD

        )

    [16] => Array
        (
            [0] => 312
            [1] =>   
        )

    [17] => Array
        (
            [0] => 305
            [1] => jhdsjkfhjdsh
        )

    [18] => Array
        (
            [0] => 312
            [1] => 

        )

    [19] => Array
        (
            [0] => 359
            [1] => DD;

        )

/*    [20] => ;  deleted */
    [21] => Array
        (
            [0] => 357
            [1] =>   
        )

    [22] => Array
        (
            [0] => 314
            [1] => echo
        )

    [23] => Array
        (
            [0] => 357
            [1] =>  
        )

    [24] => Array
        (
            [0] => 307
            [1] => $a
        )

    [25] => ;
    [26] => Array
        (
            [0] => 357
            [1] => 

        )

    [27] => Array
        (
            [0] => 356
            [1] => ?>
        )

)


Actual result:
--------------
Array
(
    [0] => Array
        (
            [0] => 354
            [1] => <?php

        )

    [1] => Array
        (
            [0] => 357
            [1] =>       
        )

    [2] => Array
        (
            [0] => 307
            [1] => $x
        )

    [3] => =
    [4] => Array
        (
            [0] => 358
            [1] => <<<DD

        )

    [5] => Array
        (
            [0] => 312
            [1] =>   
        )

    [6] => Array
        (
            [0] => 305
            [1] => jhdsjkfhjdsh
        )

    [7] => Array
        (
            [0] => 312
            [1] => 

        )

    [8] => Array
        (
            [0] => 359
            [1] => DD

        )

    [9] => .
    [10] => Array
        (
            [0] => 313
            [1] => ""
        )

    [11] => ;
    [12] => Array
        (
            [0] => 357
            [1] => 
      
        )

    [13] => Array
        (
            [0] => 307
            [1] => $a
        )

    [14] => =
    [15] => Array
        (
            [0] => 358
            [1] => <<<DD

        )

    [16] => Array
        (
            [0] => 312
            [1] =>   
        )

    [17] => Array
        (
            [0] => 305
            [1] => jhdsjkfhjdsh
        )

    [18] => Array
        (
            [0] => 312
            [1] => 

        )

    [19] => Array
        (
            [0] => 359
            [1] => DD;
;
        )

    [20] => ;
    [21] => Array
        (
            [0] => 357
            [1] =>   
        )

    [22] => Array
        (
            [0] => 314
            [1] => echo
        )

    [23] => Array
        (
            [0] => 357
            [1] =>  
        )

    [24] => Array
        (
            [0] => 307
            [1] => $a
        )

    [25] => ;
    [26] => Array
        (
            [0] => 357
            [1] => 

        )

    [27] => Array
        (
            [0] => 356
            [1] => ?>
        )

)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-11-29 10:10 UTC] andrey at midphase dot com
Sorry, actual content of test.php is

<?php
  $tokens=token_get_all(file_get_contents("code.php"));
  print_r($tokens);
?>
 [2003-11-29 14:04 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC