Fixed bug #26463 (Incorrect handling of semicolons after heredoc)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@145161 c90b9560-bf6c-de11-be94-00142212c4b1